Fix jumping on change tabs

--- a/frontend/src/components/events/events.css
+++ b/frontend/src/components/events/events.css
@@ -137,6 +137,7 @@ body:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 47vw;
 }
 
 .event-image-item {
