--- a/frontend/src/components/reservations/reservations.css
+++ b/frontend/src/components/reservations/reservations.css
@@ -1,4 +1,7 @@
 
+.event-more {
+  width: 37vw;
+}
 
 .reservations {
   overflow-wrap: break-word;
